clusters/lab/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app.kubernetes.io/name: mealie
  ports:
    - name: http
      port: 80
      targetPort: http
